@@ -5,7 +5,7 @@ Here's the procedure:
 ""
 1) Dig a tunnel from where you want the water to end up (e.g. your well cistern) off to an unused portion of the map that has an aquifer above it. Be sure to dig a one-tile-wide diagonal segment in this tunnel so water that will eventually flow through the tunnel is depressurized.
 ""
-"2) From the end of that tunnel, dig a staircase straight up to the lowest aquifer level. Erase the top staircase tile (the down-only stairs) so your miners don't dig it yet. We'll be adding it back with the aquifer_tap blueprint. Also dig the staircase column down one z-level below the tunnel level."
+"2) From the end of that tunnel, go down one z-level, enable damp dig mode in the dig toolbar, then dig a staircase straight up to the lowest aquifer level. Erase the top staircase tile (the down-only stairs) so your miners don't dig it yet. We'll be adding it back with the aquifer_tap #dig blueprint."
 ""
 "3) From the bottom of the staircase (the z-level below where the water will flow to your cisterns), dig a straight, one-tile wide tunnel to the closest edge of the map. This is your emergency drainage tunnel. Smooth the map edge tile and carve a fortification. The water can flow through the fortification and off the map, allowing the dwarves to dig out the aquifer tap without drowning."
 ""
@@ -13,15 +13,11 @@ Here's the procedure:
 ""
 "5) If you want, haul away any boulders in the tunnels and/or smooth the tiles. You won't be able to access any of this area once it fills up with water!"
 ""
-"6) Apply this blueprint (gui/quickfort aquifer_tap /dig) to the z-level above the top of the staircase, inside the lowest aquifer level. Do not unpause until after the next step."
+"6) Apply this blueprint (gui/quickfort aquifer_tap /dig) to the z-level above the top of the staircase, inside the lowest aquifer level. The tiles will be designated in ""damp dig"" mode so your miners can dig it out without the damp tiles canceling the digging designations."
 ""
-"7) Damp tiles cancel dig designations if the tile is currently hidden, so to avoid having to re-apply this blueprint after every tile your dwarves dig, position the keyboard cursor straight up (north) of the left-most tile designated for digging and straight left (west) of the topmost designated tile and run the following commands in the DFHack console:"
-tiletypes-command f any ; f designated 1 ; p any ; p hidden 0 ; r 23 23 1
-tiletypes-here
-""
-"8) Unpause and dig out the tap. You can haul away any boulders and remove the ramps if you like. The water will safely flow down the staircase, through the open floodgate, down the drainage tunnel, and off the map as long as the floodgate is open."
+"7) Dig out the tap. You can haul away any boulders and remove the ramps if you like. The water will safely flow down the staircase, through the open floodgate, down the drainage tunnel, and off the map as long as the floodgate is open."
 
-"9) Once everything is dug out and all dwarves are out of the waterways, close the floodgate. Your cisterns will fill with water. Since the waterway to your cisterns is depressurized, the cisterns will stay forever full, but will not flood."
+"8) Once everything is dug out and all dwarves are out of the waterways, close the floodgate. Your cisterns will fill with water. Since the waterway to your cisterns is depressurized, the cisterns will stay forever full, but will not flood."
 ""
 A diagram might be useful. Here is a vertical view through the z-levels. This blueprint goes at the top:
 ""
@@ -35,26 +31,26 @@ i <- cistern outlet level
 "Good luck! If done right, this method is the safest way to supply your fort with clean water."
 #dig label(dig) start(13 13 center of tap) light aquifer water collector
 
-,,,,,,,,,,,,r
-,,,,,,,,,,,,r
-,,,,,r,r,r,r,r,r,r,r,r,r,r,r,r,r,r
-,,,,,,,,,,,,r
-,,,r,,,,,,,,,r,,,,,,,,,r
-,,,r,,,,,r,r,r,r,r,r,r,r,r,,,,,r
-,,,r,,,,,,,,,r,,,,,,,,,r
-,,,r,,,r,,,,,,r,,,,,,r,,,r
-,,,r,,,r,,,,,r,r,r,,,,,r,,,r
-,,,r,,,r,,,,,,r,,,,,,r,,,r
-,,,r,,,r,,,r,,,r,,,r,,,r,,,r
-,r,r,r,r,r,r,r,r,r,r,r,j,r,r,r,r,r,r,r,r,r,r,r
-,,,r,,,r,,,r,,,r,,,r,,,r,,,r
-,,,r,,,r,,,,,,r,,,,,,r,,,r
-,,,r,,,r,,,,,r,r,r,,,,,r,,,r
-,,,r,,,r,,,,,,r,,,,,,r,,,r
-,,,r,,,,,,,,,r,,,,,,,,,r
-,,,r,,,,,r,r,r,r,r,r,r,r,r,,,,,r
-,,,r,,,,,,,,,r,,,,,,,,,r
-,,,,,,,,,,,,r
-,,,,,r,r,r,r,r,r,r,r,r,r,r,r,r,r,r
-,,,,,,,,,,,,r
-,,,,,,,,,,,,r
+,,,,,,,,,,,,mdr
+,,,,,,,,,,,,mdr
+,,,,,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr
+,,,,,,,,,,,,mdr
+,,,mdr,,,,,,,,,mdr,,,,,,,,,mdr
+,,,mdr,,,,,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,,,,,mdr
+,,,mdr,,,,,,,,,mdr,,,,,,,,,mdr
+,,,mdr,,,mdr,,,,,,mdr,,,,,,mdr,,,mdr
+,,,mdr,,,mdr,,,,,mdr,mdr,mdr,,,,,mdr,,,mdr
+,,,mdr,,,mdr,,,,,,mdr,,,,,,mdr,,,mdr
+,,,mdr,,,mdr,,,mdr,,,mdr,,,mdr,,,mdr,,,mdr
+,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdj,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr
+,,,mdr,,,mdr,,,mdr,,,mdr,,,mdr,,,mdr,,,mdr
+,,,mdr,,,mdr,,,,,,mdr,,,,,,mdr,,,mdr
+,,,mdr,,,mdr,,,,,mdr,mdr,mdr,,,,,mdr,,,mdr
+,,,mdr,,,mdr,,,,,,mdr,,,,,,mdr,,,mdr
+,,,mdr,,,,,,,,,mdr,,,,,,,,,mdr
+,,,mdr,,,,,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,,,,,mdr
+,,,mdr,,,,,,,,,mdr,,,,,,,,,mdr
+,,,,,,,,,,,,mdr
+,,,,,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr,mdr
+,,,,,,,,,,,,mdr
+,,,,,,,,,,,,mdr
